--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="icon" href="favicon.ico" type="image/x-icon" />
-	<title>Piercing Studio Populär - Landau/Pfalz</title>
-	<meta name="description" content="Piercing Studio Populär in Landau/Pfalz">
-	<meta name="keywords" content="Piercing, piercing, landau, pfalz, rofl, martin, luther, tattoo, dermal anchor, martin-luther-straße 1, landau/pfalz, 76829">
+	<title>Piercing Studio PopulÃ¤r - Landau/Pfalz</title>
+	<meta name="description" content="Piercing Studio PopulÃ¤r in Landau/Pfalz">
+	<meta name="keywords" content="Piercing, piercing, landau, pfalz, rofl, martin, luther, tattoo, dermal anchor, martin-luther-straÃŸe 1, landau/pfalz, 76829">
 </head>
 <body class="background">
 <div class="mouth"></div>
@@ -26,10 +26,10 @@
 			<img src="img/piercing_06.jpg" class="imageleft" />
 			<div class="maininner">
 				<h1>NEWS</h1>
-				<h3>NEUERÖFFNUNG</h3>
-				<p>Am 1.Oktober habe ich mein Piercingstudio POPULÄR eröffnet und mich somit vom Power Studio getrennt.</p>
-				<p>Ich heiße euch herzlich auf meiner Seite Willkommen und hoffe ihr findet hier alle Infos die ihr benötigt.</p>
-				<p>Viele Grüße Rolf</p>
+				<h3>NEUER&Ouml;FFNUNG</h3>
+				<p>Am 1.Oktober habe ich mein Piercingstudio POPULÃ„R erÃ¶ffnet und mich somit vom Power Studio getrennt.</p>
+				<p>Ich heiÃŸe euch herzlich auf meiner Seite Willkommen und hoffe ihr findet hier alle Infos die ihr benÃ¶tigt.</p>
+				<p>Viele GrÃ¼ÃŸe Rolf</p>
 			</div>
 		</div>
 	</div>
