--- a/dermalanchor.html
+++ b/dermalanchor.html
@@ -1,9 +1,9 @@
-<html>
+<html> 
 <head>
 	<link href="css/main.css" rel="stylesheet" type="text/css">
-	<title>Piercing Studio Populär - Landau/Pfalz</title>
-	<meta name="description" content="Piercing Studio Populär in Landau/Pfalz">
-	<meta name="keywords" content="Piercing, piercing, landau, pfalz, rofl, martin, luther, tattoo, dermal anchor, martin-luther-straße 1, landau/pfalz, 76829">
+	<title>Piercing Studio PopulÃ¤r - Landau/Pfalz</title>
+	<meta name="description" content="Piercing Studio PopulÃ¤r in Landau/Pfalz">
+	<meta name="keywords" content="Piercing, piercing, landau, pfalz, rofl, martin, luther, tattoo, dermal anchor, martin-luther-straÃŸe 1, landau/pfalz, 76829">
 </head>
 <body class="background">
 <div class="mouth"></div>
@@ -25,13 +25,13 @@
 			<div class="maininner">
 				<h2>Dermal Anchor</h2>
 				<p>Ein Dermal Anchor ist ein Haut Anker.</p>
-				<p>Ein Dermal Anchor hat nicht eine Ein- und Ausstichstelle wie ein Piercing, sondern nur eine Öffnung. Der Vorteil von Dermal Anchor besteht darin, dass er in der Regel meist ohne Probleme abheilt. Es wird bei einem minimalen Eingriff nur eine recht kleine Wunde (Öffnung) erzeugt. Anders als bei einem herkömmlichen Piercing, der meist aus einem längeren Stichkanal mit zwei Öffnungen besteht.</p>
-				<p>Ein Microdermal kann nahezu an allen Körperstellen eingesetzt werden. Man sollte die Stelle trotzdem gut auswählen. Stellen, die man stark beansprucht bzw. bewegt, sollte man meiden. Zum Beispiel am Hosenbund oder Hals.</p>
-				<p>Im Prinzip sind der Fantasie keine Grenzen gesetzt. Ein Dermal Anchor besteht in der Regel aus zwei Teilen. ein etwas längeres Plättchen mit Innengewinde und ein Disk mit Stein, der als Aufsatz dient.</p>
-				<p>Für den Dermal Anchor wird mit einer Biopsie Punch ein kleiner Stich gemacht. Es gibt noch andere Arten, aber die Biopsie-Methode hat sich erfahrungsgemäß durchgesetzt. Mit ihr wurden die besten Ergebnisse erzielt. In diese Öffnung wird der Schmuck eingesetzt.</p>
-				<p>Nach dem Einsetzen wird der Dermal Anchor für circa zwei Wochen (je nach Verträglichkeit) mit einem speziellen Wundpflaster fixiert, damit er seine Position behält und abheilen kann. Sauberkeit und die richtige Pflege sind natürlich die Grundlage für eine optimale Wundheilung. Auf Sport, Schwimmen, Solarium, Sauna, Vollbad, etc. solltest Du circa zwei Wochen verzichten. Benutze auch Seifenlaugen-haltigen Pflegeprodukte. Vermeide Duschgel Creme, Make up oder sonstiges an diesen Stellen. Verwende stattdessen pH-neutrale, Seifenlaugen-freie Waschlotionen wie Sebamed.</p>
-				<p>Einmal täglich – am besten nach dem Duschen – solltest Du die Stelle gründlich reinigen und desinfizieren. Natürlich sollte danach wieder ein Pflaster verwendet werden. Das Wechseln der Aufsätze sollte nur vom Profi und am verheilten Anker vorgenommen werden. Ein Austauschen der Aufsätze ist frühestens nach drei Monaten möglich.</p>
-				<p>Natürlich gibt es auch Risiken. Der Dermal Anchor kann sich entzünden, herauswachsen und man kann daran hängen bleiben. Erste Anzeichen von Entzündungen solltest Du sofort behandeln und bei mir im Studio vorbeikommen. Schnelles Handeln ist erforderlich, da es sonst das Dermal Anchor gefährdet! Bei Problemen solltest Du Dich an mich wenden; ich werde dir fachmännisch zur Seite stehen.</p>
+				<p>Ein Dermal Anchor hat nicht eine Ein- und Ausstichstelle wie ein Piercing, sondern nur eine Ã–ffnung. Der Vorteil von Dermal Anchor besteht darin, dass er in der Regel meist ohne Probleme abheilt. Es wird bei einem minimalen Eingriff nur eine recht kleine Wunde (Ã–ffnung) erzeugt. Anders als bei einem herkÃ¶mmlichen Piercing, der meist aus einem lÃ¤ngeren Stichkanal mit zwei Ã–ffnungen besteht.</p>
+				<p>Ein Microdermal kann nahezu an allen KÃ¶rperstellen eingesetzt werden. Man sollte die Stelle trotzdem gut auswÃ¤hlen. Stellen, die man stark beansprucht bzw. bewegt, sollte man meiden. Zum Beispiel am Hosenbund oder Hals.</p>
+				<p>Im Prinzip sind der Fantasie keine Grenzen gesetzt. Ein Dermal Anchor besteht in der Regel aus zwei Teilen. ein etwas lÃ¤ngeres PlÃ¤ttchen mit Innengewinde und ein Disk mit Stein, der als Aufsatz dient.</p>
+				<p>FÃ¼r den Dermal Anchor wird mit einer Biopsie Punch ein kleiner Stich gemacht. Es gibt noch andere Arten, aber die Biopsie-Methode hat sich erfahrungsgemÃ¤ÃŸ durchgesetzt. Mit ihr wurden die besten Ergebnisse erzielt. In diese Ã–ffnung wird der Schmuck eingesetzt.</p>
+				<p>Nach dem Einsetzen wird der Dermal Anchor fÃ¼r circa zwei Wochen (je nach VertrÃ¤glichkeit) mit einem speziellen Wundpflaster fixiert, damit er seine Position behÃ¤lt und abheilen kann. Sauberkeit und die richtige Pflege sind natÃ¼rlich die Grundlage fÃ¼r eine optimale Wundheilung. Auf Sport, Schwimmen, Solarium, Sauna, Vollbad, etc. solltest Du circa zwei Wochen verzichten. Benutze auch Seifenlaugen-haltigen Pflegeprodukte. Vermeide Duschgel Creme, Make up oder sonstiges an diesen Stellen. Verwende stattdessen pH-neutrale, Seifenlaugen-freie Waschlotionen wie Sebamed.</p>
+				<p>Einmal tÃ¤glich â€“ am besten nach dem Duschen â€“ solltest Du die Stelle grÃ¼ndlich reinigen und desinfizieren. NatÃ¼rlich sollte danach wieder ein Pflaster verwendet werden. Das Wechseln der AufsÃ¤tze sollte nur vom Profi und am verheilten Anker vorgenommen werden. Ein Austauschen der AufsÃ¤tze ist frÃ¼hestens nach drei Monaten mÃ¶glich.</p>
+				<p>NatÃ¼rlich gibt es auch Risiken. Der Dermal Anchor kann sich entzÃ¼nden, herauswachsen und man kann daran hÃ¤ngen bleiben. Erste Anzeichen von EntzÃ¼ndungen solltest Du sofort behandeln und bei mir im Studio vorbeikommen. Schnelles Handeln ist erforderlich, da es sonst das Dermal Anchor gefÃ¤hrdet! Bei Problemen solltest Du Dich an mich wenden; ich werde dir fachmÃ¤nnisch zur Seite stehen.</p>
 			</div>
 		</div>
 	</div>
