--- a/pflege.html
+++ b/pflege.html
@@ -1,9 +1,9 @@
-<html>
+<html> 
 <head>
 	<link href="css/main.css" rel="stylesheet" type="text/css">
-	<title>Piercing Studio Populär - Landau/Pfalz</title>
-	<meta name="description" content="Piercing Studio Populär in Landau/Pfalz">
-	<meta name="keywords" content="Piercing, piercing, landau, pfalz, rofl, martin, luther, tattoo, dermal anchor, martin-luther-straße 1, landau/pfalz, 76829">
+	<title>Piercing Studio PopulÃ¤r - Landau/Pfalz</title>
+	<meta name="description" content="Piercing Studio PopulÃ¤r in Landau/Pfalz">
+	<meta name="keywords" content="Piercing, piercing, landau, pfalz, rofl, martin, luther, tattoo, dermal anchor, martin-luther-straÃŸe 1, landau/pfalz, 76829">
 </head>
 <body class="background">
 <div class="mouth"></div>
@@ -24,27 +24,27 @@
 			<img src="img/piercing_01.jpg" class="imageleft" />
 			<div class="maininner">
 				<h2>Pflege & Risiken</h2>
-				<p>Die ungefähre Abheilungszeit beträgt ca. drei bis sechs Wochen, je nach Art des Piercings und der Körperstelle.</p>
+				<p>Die ungefÃ¤hre Abheilungszeit betrÃ¤gt ca. drei bis sechs Wochen, je nach Art des Piercings und der KÃ¶rperstelle.</p>
 				<h3>Reinigung</h3>
-				<p>Wasche vor dem Reinigen des Piercings Deine Hände gründlich. Säubere und desinfiziere das Piercing und die betroffene Körperstelle zweimal täglich, ohne das Piercing herauszunehmen. Die Reinigung erfolgt am besten morgens und abends. Verwende dazu am besten ein Hautdesinfektionsmittel wie Prontolind oder Octenisept. Beim Lippen-Piercing verwende eine antibakterielle Mundspülung nach dem Zähneputzen wie Listerine oder Antiplax. Benutzer für circa zwei Wochen keine Seifenlaugen-haltige Hygieneartikel wie Seife, Duschgel, Cremes, am Piercing. (Unser Tipp: Nimm stattdessen die Produkte von Sebamed). Verzichte zwei Wochen auf Sauna, Voll- oder Schwimmbad.</p>
-				<p>Normale Reaktionen der Haut auf das Piercing sind eine leichte Rötung um den Stichkanal, eventuell leichtes Nachbluten, Flüssigkeitsabsonderung und Schwellungen.</p>
-				<p>Risiken sind Entzündung oder des Herauswachsens des Piercings. Um eine Entzündungen zu vermeiden, übe bitte keinen Druck oder Spannung auf das Piercing aus (z.B. Hosenbund, enge Kleidung, etc.). Beachte die Reinigungshinweise und vermeide Verunreinigung jeglicher Art.</p>
-				<p>Bei Fragen, Komplikationen oder Schmerzen könnt Ihr Euch jeder Zeit vertrauensvoll an mich wenden – entweder telefonisch oder per E-Mail: <a href="mailto:piercingstudio-landau@gmx.de">piercingstudio-landau@gmx.de</a>.</p>
+				<p>Wasche vor dem Reinigen des Piercings Deine HÃ¤nde grÃ¼ndlich. SÃ¤ubere und desinfiziere das Piercing und die betroffene KÃ¶rperstelle zweimal tÃ¤glich, ohne das Piercing herauszunehmen. Die Reinigung erfolgt am besten morgens und abends. Verwende dazu am besten ein Hautdesinfektionsmittel wie Prontolind oder Octenisept. Beim Lippen-Piercing verwende eine antibakterielle MundspÃ¼lung nach dem ZÃ¤hneputzen wie Listerine oder Antiplax. Benutzer fÃ¼r circa zwei Wochen keine Seifenlaugen-haltige Hygieneartikel wie Seife, Duschgel, Cremes, am Piercing. (Unser Tipp: Nimm stattdessen die Produkte von Sebamed). Verzichte zwei Wochen auf Sauna, Voll- oder Schwimmbad.</p>
+				<p>Normale Reaktionen der Haut auf das Piercing sind eine leichte RÃ¶tung um den Stichkanal, eventuell leichtes Nachbluten, FlÃ¼ssigkeitsabsonderung und Schwellungen.</p>
+				<p>Risiken sind EntzÃ¼ndung oder des Herauswachsens des Piercings. Um eine EntzÃ¼ndungen zu vermeiden, Ã¼be bitte keinen Druck oder Spannung auf das Piercing aus (z.B. Hosenbund, enge Kleidung, etc.). Beachte die Reinigungshinweise und vermeide Verunreinigung jeglicher Art.</p>
+				<p>Bei Fragen, Komplikationen oder Schmerzen kÃ¶nnt Ihr Euch jeder Zeit vertrauensvoll an mich wenden â€“ entweder telefonisch oder per E-Mail: <a href="mailto:piercingstudio-landau@gmx.de">piercingstudio-landau@gmx.de</a>.</p>
 				<p>Nach 14 Tagen komme bitte zur Nachkontrolle im Studio vorbei!</p>
-				<h3>Pflegehinweis für das Zungen-Piercing</h3>
-				<p>Die ungefähre Abheilungszeit beträgt ca. 2–4 Wochen (je nach Wundheilung).</p>
+				<h3>Pflegehinweis fÃ¼r das Zungen-Piercing</h3>
+				<p>Die ungefÃ¤hre Abheilungszeit betrÃ¤gt ca. 2â€“4 Wochen (je nach Wundheilung).</p>
 				<h3>Reinigung</h3>
-				<p>Putze Dir nach jedem Essen immer die Zähne, jedoch mindestens dreimal täglich. Hinterher spüle den Mund mit einer antibakteriellen Mundspülung wie Listerine auspülen (Empfehlung: Mundspülung Hexoral solltest Du nur zweimal täglich verwenden). Es ist völlig normal, dass die Zunge nach dem Piercen anschwillt, leicht blutet oder Sekret absondert.</p>
+				<p>Putze Dir nach jedem Essen immer die ZÃ¤hne, jedoch mindestens dreimal tÃ¤glich. Hinterher spÃ¼le den Mund mit einer antibakteriellen MundspÃ¼lung wie Listerine auspÃ¼len (Empfehlung: MundspÃ¼lung Hexoral solltest Du nur zweimal tÃ¤glich verwenden). Es ist vÃ¶llig normal, dass die Zunge nach dem Piercen anschwillt, leicht blutet oder Sekret absondert.</p>
 				<ul>
 					<li>Rauche nach dem Piercen drei Stunden nicht.</li>
-					<li>Vermeide einen übermäßigen Genuss von Alkohol.</li>
-					<li>Meide bitte zu scharfe oder heiße Speisen und Getränke.</li>
-					<li>Esse wenig Milchprodukte und Süßigkeiten.</li>
+					<li>Vermeide einen Ã¼bermÃ¤ÃŸigen Genuss von Alkohol.</li>
+					<li>Meide bitte zu scharfe oder heiÃŸe Speisen und GetrÃ¤nke.</li>
+					<li>Esse wenig Milchprodukte und SÃ¼ÃŸigkeiten.</li>
 					<li>Nimm keine Rohmilchprodukte zu Dir. </li>
 				</ul>
-				<p>Ansonsten kannst Du alles essen (Fleisch, Gemüse, Kartoffeln, Nudeln, etc.)</p>
-				<p>Bei Fragen oder Komplikationen könnt Ihr Euch jederzeit vertrauensvoll an mich wenden – telefonisch oder per E-Mail: <a href="mailto:piercingstudio-landau@gmx.de">piercingstudio-landau@gmx.de</a>.</p> 
-				<p><strong>Tipp</strong>: Nach dem Piercen kann man die Zunge mit Eiswürfel aus abgekochten Wasser (zum Beispiel Kamillentee) kühlen.</p>
+				<p>Ansonsten kannst Du alles essen (Fleisch, GemÃ¼se, Kartoffeln, Nudeln, etc.)</p>
+				<p>Bei Fragen oder Komplikationen kÃ¶nnt Ihr Euch jederzeit vertrauensvoll an mich wenden â€“ telefonisch oder per E-Mail: <a href="mailto:piercingstudio-landau@gmx.de">piercingstudio-landau@gmx.de</a>.</p> 
+				<p><strong>Tipp</strong>: Nach dem Piercen kann man die Zunge mit EiswÃ¼rfel aus abgekochten Wasser (zum Beispiel Kamillentee) kÃ¼hlen.</p>
 				<p>Nach acht Tagen komm bitte zum Wechseln des Schmucks vorbei!</p>
 			</div>
 		</div>
