--- a/piercing.html
+++ b/piercing.html
@@ -1,9 +1,9 @@
-<html>
+<html> 
 <head>
 	<link href="css/main.css" rel="stylesheet" type="text/css">
-	<title>Piercing Studio Populär - Landau/Pfalz</title>
-	<meta name="description" content="Piercing Studio Populär in Landau/Pfalz">
-	<meta name="keywords" content="Piercing, piercing, landau, pfalz, rofl, martin, luther, tattoo, dermal anchor, martin-luther-straße 1, landau/pfalz, 76829">
+	<title>Piercing Studio PopulÃ¤r - Landau/Pfalz</title>
+	<meta name="description" content="Piercing Studio PopulÃ¤r in Landau/Pfalz">
+	<meta name="keywords" content="Piercing, piercing, landau, pfalz, rofl, martin, luther, tattoo, dermal anchor, martin-luther-straÃŸe 1, landau/pfalz, 76829">
 </head>
 <body class="background">
 <div class="mouth"></div>
@@ -24,20 +24,20 @@
 			<img src="img/piercing_05.jpg" class="imageleft" />
 			<div class="maininner">
 				<h2>Piercing allgemein</h2>
-				<p>Ich heiße Rolf und pierce seit 20 Jahren. Durch diese langjährige Erfahrung habe ich mir ein großes Fachwissen aufgebaut. So verfüge ich über eine ausgefeilte Technik und kann Dich optimal bei der Wahl des Schmucks beraten. Um mein Know-How zu vertiefen, nehme ich regelmäßig an Seminaren teil. Ebenso bin ich Mitglied der EAPP (European Association for Professional Piercing) und bei BMXnet.
+				<p>Ich heiÃŸe Rolf und pierce seit 20 Jahren. Durch diese langjÃ¤hrige Erfahrung habe ich mir ein groÃŸes Fachwissen aufgebaut. So verfÃ¼ge ich Ã¼ber eine ausgefeilte Technik und kann Dich optimal bei der Wahl des Schmucks beraten. Um mein Know-How zu vertiefen, nehme ich regelmÃ¤ÃŸig an Seminaren teil. Ebenso bin ich Mitglied der EAPP (European Association for Professional Piercing) und bei BMXnet.
 				</p>
-				<p>Ein hoher Hygiene-Standard steht bei mir an der ersten Stelle. So werden Infektionen vorgebeugt, um eine problemlose Heilung nicht zu gefährden. Sauberes und steriles Arbeiten ist selbstverständlich.</p>
-				<p>In einem individuellen Beratungs- und Aufklärungsgespräch beantwortete ich Dir alle Fragen. Aufgrund meiner ruhigen und sicheren Art legt sich dann auch die letzte Nervosität.</p>
-				<p>Sobald Du das Studio verlässt, liegt die Heilung in Deinen Händen. Bitte halte Dich an die Pflege-Hinweise, die Du im Studio mit auf den Weg bekommst, damit Du viel Spaß mit Deinem Piercing hast. Sollten mit dem Piercing Probleme auftreten oder solltest Du Dir unsicher sein, ob alles in Ordnung ist, scheue Dich nicht davor, sofort anzurufen oder vorbei zu kommen. Bitte wende Dich erst an mich und nicht an andere wie Freunde, Verwandte, Ärzte, etc. Ich kann Dir mit Rat und Tat bestimmt helfen.</p>
+				<p>Ein hoher Hygiene-Standard steht bei mir an der ersten Stelle. So werden Infektionen vorgebeugt, um eine problemlose Heilung nicht zu gefÃ¤hrden. Sauberes und steriles Arbeiten ist selbstverstÃ¤ndlich.</p>
+				<p>In einem individuellen Beratungs- und AufklÃ¤rungsgesprÃ¤ch beantwortete ich Dir alle Fragen. Aufgrund meiner ruhigen und sicheren Art legt sich dann auch die letzte NervositÃ¤t.</p>
+				<p>Sobald Du das Studio verlÃ¤sst, liegt die Heilung in Deinen HÃ¤nden. Bitte halte Dich an die Pflege-Hinweise, die Du im Studio mit auf den Weg bekommst, damit Du viel SpaÃŸ mit Deinem Piercing hast. Sollten mit dem Piercing Probleme auftreten oder solltest Du Dir unsicher sein, ob alles in Ordnung ist, scheue Dich nicht davor, sofort anzurufen oder vorbei zu kommen. Bitte wende Dich erst an mich und nicht an andere wie Freunde, Verwandte, Ã„rzte, etc. Ich kann Dir mit Rat und Tat bestimmt helfen.</p>
 				<h3>2 Wochen nach dem Piercen</h3>
-				<p>Fasse das Piercing immer mit sauberen – wenn möglich desinfizierten – Händen an. Fasse den Schmuck nur fürs Reinigen an (nicht ständig herumspielen). Greife das Piercing immer am besten an den Enden. Nicht den Schmuck drehen, schieben oder darauf herum drücken! Vorhandenes abgetrocknetes Sekret reist so immer wieder die Wundränder ein und Bakterien können leichter eindringen.</p>
+				<p>Fasse das Piercing immer mit sauberen â€“ wenn mÃ¶glich desinfizierten â€“ HÃ¤nden an. Fasse den Schmuck nur fÃ¼rs Reinigen an (nicht stÃ¤ndig herumspielen). Greife das Piercing immer am besten an den Enden. Nicht den Schmuck drehen, schieben oder darauf herum drÃ¼cken! Vorhandenes abgetrocknetes Sekret reist so immer wieder die WundrÃ¤nder ein und Bakterien kÃ¶nnen leichter eindringen.</p>
 				<h3>3-6 Wochen nach dem Piercen</h3>
-				<p>Vermeide Schmutz. Fasse nicht mit unsauberen Händen an Dein Piercing. Verwende keine Cremes, Salben oder alkoholhaltige Flüssigkeiten. Trage keine Kleidung, die auf das Piercing drücken oder reiben. Beim Intim-Piercing: Keinen GV ohne Kondom bis es komplett ausgeheilt ist. Vermeide mindestens 3 Wochen Oralverkehr.</p>
+				<p>Vermeide Schmutz. Fasse nicht mit unsauberen HÃ¤nden an Dein Piercing. Verwende keine Cremes, Salben oder alkoholhaltige FlÃ¼ssigkeiten. Trage keine Kleidung, die auf das Piercing drÃ¼cken oder reiben. Beim Intim-Piercing: Keinen GV ohne Kondom bis es komplett ausgeheilt ist. Vermeide mindestens 3 Wochen Oralverkehr.</p>
 				<h3>Pflegetipps</h3>
-				<p>Sauber Hände sind ein Muss!</p>
-				<p>Wenn Wundsekret an Deinem Piercing ist, kannst Du es nach dem Duschen vorsichtig mit einem Wattestäbchen entfernen. Tränke am besten das Wattestäbchen mit Prontolind.</p>
-				<p>Reinige mindestens 2 Wochen lang mehrmals täglich die gepiercte Stelle mit Prontolind und einem Wattestäbchen.</p>
-				<p>Vermeide Sauna, Solarium, Schwimmbad und extreme sportliche Tätigkeiten.</p>
+				<p>Sauber HÃ¤nde sind ein Muss!</p>
+				<p>Wenn Wundsekret an Deinem Piercing ist, kannst Du es nach dem Duschen vorsichtig mit einem WattestÃ¤bchen entfernen. TrÃ¤nke am besten das WattestÃ¤bchen mit Prontolind.</p>
+				<p>Reinige mindestens 2 Wochen lang mehrmals tÃ¤glich die gepiercte Stelle mit Prontolind und einem WattestÃ¤bchen.</p>
+				<p>Vermeide Sauna, Solarium, Schwimmbad und extreme sportliche TÃ¤tigkeiten.</p>
 			</div>
 		</div>
 	</div>
