--- a/galerie_piercing.html
+++ b/galerie_piercing.html
@@ -1,9 +1,9 @@
-<html>
+<html> 
 <head>
 	<link href="css/main.css" rel="stylesheet" type="text/css">
-	<title>Piercing Studio Popul‰r - Landau/Pfalz</title>
-	<meta name="description" content="Piercing Studio Popul‰r in Landau/Pfalz">
-	<meta name="keywords" content="Piercing, piercing, landau, pfalz, rofl, martin, luther, tattoo, dermal anchor, martin-luther-straﬂe 1, landau/pfalz, 76829">
+	<title>Piercing Studio Popul√§r - Landau/Pfalz</title>
+	<meta name="description" content="Piercing Studio Popul√§r in Landau/Pfalz">
+	<meta name="keywords" content="Piercing, piercing, landau, pfalz, rofl, martin, luther, tattoo, dermal anchor, martin-luther-stra√üe 1, landau/pfalz, 76829">
 	<link href="css/lightbox.css" rel="stylesheet" />
 	<script src="js/jquery-1.10.2.min.js"></script>
 	<script src="js/lightbox-2.6.min.js"></script>
@@ -27,7 +27,7 @@
 		<table class="menuwrappergallery">
 			<tr>
 				<td class="menuitem menuitemgallery selected"><a href="galerie_piercing.html"><div class="menuiteminner">Piercing</div></a></td>
-				<td class="menuitem menuitemgallery"><a href="galerie_oberflaechen_piercing.html"><div class="menuiteminner">Oberfl‰chen Piercing</div></a></td>
+				<td class="menuitem menuitemgallery"><a href="galerie_oberflaechen_piercing.html"><div class="menuiteminner">Oberfl√§chen Piercing</div></a></td>
 				<td class="menuitem menuitemgallery"><a href="galerie_dermal_anchor.html"><div class="menuiteminner">Dermal Anchor</div></a></td>
 			</td>
 		</table>
